@@ -8,6 +8,10 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	Michael Johnson, Steve Cole, dhaval, Rick Widmer
 	- Another attempt at maildirquota
 
+        Harmut Wernisch, Tom Collins
+	- Fix mixed up usage of MYSQL_UPDATE_* and MYSQL_READ_* in vmysql.c:load_connection_info()
+	This may need a tracker number attached.  I can't find it.
+
 
 5.4.26 - Released 3-Nov-2007
 	Bill Shupp
